2018-06-08  Miguel Gomez  <magomez@igalia.com>

        [GTK][WPE] Wrong result when calling ImageBufferCairo's getImageData()
        https://bugs.webkit.org/show_bug.cgi?id=186384

        Reviewed by Michael Catanzaro.

        Fix calculations so the result is the expected one.

        * platform/graphics/cairo/ImageBufferCairo.cpp:
        (WebCore::getImageData):

2018-05-15  Carlos Alberto Lopez Perez  <clopez@igalia.com>

        [WPE] Build failure with RPi userland drivers and gstreamer-gl
        https://bugs.webkit.org/show_bug.cgi?id=185639

        Reviewed by Philippe Normand.

        When building for the RPi with userland drivers (dispmanx) override the
        value of GST_GL_HAVE_GLSYNC to 1 to avoid that the gstreamer-gl headers
        try to redefine the GLsync type that is already defined in libepoxy.

        Defining __gl2_h_ is also needed to avoid other conflicting type
        definitions that happen between libepoxy and RPi GLES2 userland
        headers when the gstreamer-gl headers are included.

        The issue doesn't happen with 1.14.0, so a check for that is added
        as well.

        No new tests, no behavior change. It is a build fix.

        * platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.cpp:

2018-05-15  Thomas Klausner  <tk@giga.or.at>

        Add missing header to fix build.
        https://bugs.webkit.org/show_bug.cgi?id=185378

        Reviewed by Michael Catanzaro.

        * platform/network/soup/SoupNetworkSession.h:

2018-05-10  Michael Catanzaro  <mcatanzaro@igalia.com>

        Unreviewed, silence a couple more build warnings on the stable branch

        * platform/network/soup/NetworkStorageSessionSoup.cpp:
        (WebCore::NetworkStorageSession::getCredentialFromPersistentStorage):

2018-05-09  Michael Catanzaro  <mcatanzaro@igalia.com>

        [WPE] Build cleanly with GCC 8 and ICU 60
        https://bugs.webkit.org/show_bug.cgi?id=185462
