@@ -1,3 +1,13 @@
+2018-06-10  Michael Catanzaro  <mcatanzaro@igalia.com>
+
+        [WPE][GTK] paypal.com requires user agent quirk
+        https://bugs.webkit.org/show_bug.cgi?id=186466
+
+        Reviewed by Carlos Garcia Campos.
+
+        * TestWebKitAPI/Tests/WebCore/UserAgentQuirks.cpp:
+        (TestWebKitAPI::TEST):
+
 2018-05-17  Carlos Alberto Lopez Perez  <clopez@igalia.com>
 
         [WPE] Implement and enable FULLSCREEN_API
